# New-Report

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  mod.rs
src/components/: error_modal.rs  status_modal.rs
src/core/: engine.rs
src/style/: main.css
src/views/: editor.rs  home.rs  mod.rs  report.rs
