[package]
name = "NewReport"
version = "0.1.0"
edition = "2024"

# [profile.release]
# opt-level = 3         
# lto = true            
# codegen-units = 1    
# panic = "abort"       
# strip = true

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
toml = "0.8"
dotenvy = "0.15"
chrono = "=0.4.34"
datafusion = "37.0"
rayon = "1.10"

[build-dependencies]
winres = "0.1"